# loopos-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/components/: LoopStatus.tsx  MetricsCard.tsx
src/: config.py
src/flow/: graph.py  nodes.py
src/metrics/: ece.py  rbb.py  tofu.py
tests/: test_flow.py  test_metrics.py
