[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopos-core"
version = "0.1.0"
description = "Python middleware for LLM verification with metrics and LangGraph-style flow."
authors = [{ name = "loopos" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
