[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopos-core"
version = "0.1.0"
description = "Middleware for measuring and mitigating LLM hallucinations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic<2.0.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
